New in version 0.98.4 (??? 2009)
 * Fix build break in optional OWL-format output.
 * Delete obsolete interface class RelexInfo.

New in version 0.98.3 (February 2009)
 * Fix bug, where the OpenNLP doc splitter was not being found.
 * Clarify installation instructions.
 * Tag certain date expressions as such.
 * Collect sentence statistics in the CFF output parser.
 * Fix parsing bug introduced in version 0.10.1

New in version 0.98.2 (January 2009)
 * Fix error in optional GATE/OpenNLP build.
 * Add support for automatically-propagated RelEx version number.

New in version 0.98.1: (Jaunary 2009)
 * Expose the new link-grammar "disjunct string" API
   (this requires link-grammar version 4.4.2).
 * Add comment delimiters to the frame rules file.
 * Fix, now supports jwnl-1.4rc2
 * Add initial OWL-format output.
 * Make install/use of GATE and OpenNLP optional.
 * Cleanup README to be clearer on how to use RelEx.

New in version 0.98.0:  (December 2008) 
 * Bump version number, in preparation for a 1.0 release.
 * New JSON interface to the link-grammar parser, for improved server
   performance (from Borislav Iordanov).

New in version 0.10.1:
 * remove cleanSentenceString(), replace with entity id's.
 * Avoid printing parens in the constituent string.
 * Add a pom.xml file for use with Maven.

New in version 0.8.4:
 * Convert DocSplitter to factory, so that the OpenNLP install is optional.